syntax= "proto3";


option csharp_namespace= "MiSmart.API.Protos";


service AuthProtoService{
    rpc GetUserInfo (GetUserInfoProtoRequest) returns (UserProtoModel);
    rpc GetProfileInfo (GetProfileProtoRequest) returns (UserProtoModel);
    rpc GetUserExistingInformation (GetUserExistingInformationRequest) returns (UserExistingInformationProtoModel);
    rpc CreateUserByPhone(CreateUserByPhoneRequest) returns (CreateUserResponseModel);
}

message GetUserExistingInformationRequest {
    string encryptedUUID =1;
}
message CreateUserByPhoneRequest {
    string phoneNumber =1;
    string name =2;
    int32 roleID =3;
}

message CreateUserResponseModel {
    int64 id=1;
    string uuid=2;
}

message UserExistingInformationProtoModel {
    bool isExist =1;
    string decryptedUUID = 2;
    int32 roleID=3;
}


message GetUserInfoProtoRequest {
    int64 id =1;
}

message UserProtoModel {
    int64 id =1;
    string email = 2;
}

message GetProfileProtoRequest{
    string accessToken =1;
}